# ai_app

./: README.md  alembic.ini  database.py  docker-compose.yml  dockerfile  pyproject.toml
alembic/: env.py
alembic/versions/: 02979cf0af12_first_revision.py  0e75d9359cca_first_revision.py  10268616fdc4_first_revision.py  13970809280f_first_revision.py  17046dafbd04_first_revision.py  17ac597bdf02_first_revision.py  1d8e86afafc2_first_revision.py  2ce69accc27c_first_revision.py  32112d44e4c2_first_revision.py  3b0c361d0b6e_first_revision.py  3eaacf9860f6_first_revision.py  4846f3973693_first_revision.py  4a07071b538a_first_revision.py  4b596ce25722_first_revision.py  4e29e1f8b36c_first_revision.py  508ef257d194_first_revision.py  5a6db2e9ffb4_first_revision.py  5d22bb9c64e2_first_revision.py  667f7070ea34_first_revision.py  6e40c68850c7_first_revision.py  78aafab2560b_first_revision.py  7e1b1eb25159_first_revision.py  82ffc94396d2_first_revision.py  912ccb3e7b1f_first_revision.py  992914992ffb_first_revision.py  aa3d982a1a4a_first_revision.py  abfa47849894_first_revision.py  adaa8ce77ec1_first_revision.py  b18dc536afe6_first_revision.py  (+16 more)
app/: alembic.ini  app.py  commons.py  conf.py  config.py  crud.py  database.py  dependencies.py  main.py  medication_request.py  models.py  patient.py  router.py  schemas.py  security.py  utils.py
app/alembic/: env.py
tests/: conftest.py  test_app.py  test_clinician_enpoints.py  test_medication_endpoints.py  test_medication_request_endpoints.py  test_organization_endpoints.py  test_patient_endpoint.py  test_user_endpoints.py
(+23 files in other folders)
