[tool.poetry]
name = "ai-app"
version = "0.1.0"
description = ""
authors = ["dany1940 <59851426+dany1940@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
pytest = "^8.2.1"
sqlalchemy = "^2.0.30"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
