[tool.poetry]
name = "ai-app"
version = "0.1.0"
description = ""
authors = ["dany1940 <59851426+dany1940@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "^2.0.30"
pydantic = "^2.7.1"
psycopg2 = "^2.9.9"
alembic = "^1.13.1"
sqlmodel = "^0.0.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
